kubernetes/bff/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentsearch-bff
  labels:
    app: fluentsearch-bff
  namespace: fluentsearch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fluentsearch-bff
  template:
    metadata:
      labels:
        app: fluentsearch-bff
    spec:
      containers:
        - name: fluentsearch-bff
          image: yee2542/fluentsearch-bff:latest
          ports:
            - containerPort: 5000
