kubernetes/bff/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fluentsearch-bff-service
  namespace: fluentsearch
  annotations:
    linkerd.io/inject: enabled
spec:
  type: NodePort
  selector:
    app: fluentsearch-bff
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30009
