kubernetes/bff/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentsearch-bff-ingress
  namespace: fluentsearch-bff
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "api.fluentsearch.ml"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fluentsearch-bff-service
                port:
                  number: 5000
